# autiobook

./: .env.example  .gitignore  DESIGN.md  Makefile  README.md  ROADMAP.md  pyproject.toml
autiobook/: audio.py  audition.py  callback.py  casting.py  config.py  design.py  dramatize.py  epub.py  export.py  introduce.py  llm.py  locate.py  main.py  pooling.py  resume.py  retake.py  showcase.py  tts.py  tts_http.py  utils.py
testdata/: isaac-asimov_short-science-fiction_advanced.epub
tests/: check_speed.py  test_e2e_dramatize.sh  test_epub.py  test_llm.py  test_locate.py  test_pooling.py  test_retake.py  test_retake_inline.py  test_script_validation.py  test_showcase.py  test_validation_details.py  test_validation_scaling.py
